--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
+@font-face {
+    font-family: 'main-font';
+    src: url("/fonts/anticslab-regular-webfont.woff2") format("woff2"),
+    url("/fonts/anticslab-regular-webfont.woff") format("woff");
+}
+
 :root {
     --background: #282a36;
+    --start-screen-bg: #6273a4f8;
     --subtle: #6272a4;
     --pink: #ff79c6;
     --green: #50fa7b;
@@ -19,6 +26,70 @@
 
 body {
     margin: 0;
+    position: relative;
+    font-family: "main-font", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: var(--yellow);
+    font-size: 2rem;
+}
+
+.start-screen {
+    position: absolute;
+    background-color: var(--start-screen-bg);
+    opacity: 1;
+    inset: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 5%;
+    transition: 0.3s;
+}
+
+.text-display {
+    white-space: pre;
+    text-align: center;  
+}
+
+.hide {
+    opacity: 0;
+}
+
+.character-select {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 50px;
+}
+
+.char {
+    width: var(--cell-size);
+    height: var(--cell-size);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10%;
+    cursor: pointer;
+}
+
+.char:active {
+    transform: scale(0.9);
+}
+
+.char.o::after {
+    background-color: var(--start-screen-bg);
+}
+
+.char.x:hover {
+    background-color: var(--pink);
+}
+
+.char.o:hover,
+.char.o:hover:after {
+    background-color: var(--green);
+}
+
+.hide {
+    opacity: 0;
 }
 
 .board {
@@ -62,7 +133,9 @@ body {
 
 
 .cell.x::before,
-.cell.x::after {
+.cell.x::after,
+.char.x::before,
+.char.x::after {
     content: '';
     position: absolute;
     height: var(--mark-size);
@@ -70,28 +143,34 @@ body {
     background-color: var(--green);
 }
 
-.cell.x::before {
+.cell.x::before,
+.char.x::before {
     transform: rotate(45deg);
 }
 
-.cell.x::after {
+.cell.x::after,
+.char.x::after {
     transform: rotate(-45deg);
 }
 
 .cell.o::before,
-.cell.o::after {
+.cell.o::after,
+.char.o::before,
+.char.o::after {
     content: '';
     position: absolute;
     border-radius: 50%;
 }
 
-.cell.o::before {
+.cell.o::before,
+.char.o::before {
     height: var(--mark-size);
     width: var(--mark-size);
     background-color: var(--pink);
 }
 
-.cell.o::after {
+.cell.o::after,
+.char.o::after {
     height: calc(var(--mark-size) * 0.8);
     width: calc(var(--mark-size) * 0.8);
     background-color: var(--background);
@@ -133,3 +212,6 @@ body {
     background-color: var(--background);
 }
 
+.char.o::after {
+    background-color: var(--start-screen-bg);
+}
