--- a/style.css
+++ b/style.css
@@ -223,6 +223,71 @@ body {
     background-color: var(--start-screen-bg);
 }
 
-.board.win1::after {
-    
+.cell-container::after {
+    transform: scale(0);
+    transform-origin: top;
+    /* transition: 0.3s; */
+    content: '';
+    position: absolute;
+    background-color: var(--yellow);
+    width: 1px;
+    height: 100%;
 }
+.cell-container.win0::after {
+    transform: scale(1);
+    left: calc(var(--cell-size) / 2);
+}
+
+.cell-container.win1::after {
+    transform: scale(1);
+}
+
+.cell-container.win2::after {
+    transform: scale(1);
+    transform-origin: top;
+    right: calc(var(--cell-size) / 2);
+}
+
+.cell-container.rows::after {
+    transform-origin: left;
+    scale:0;
+    width: 100%;
+    height: 1px;
+}
+
+.cell-container.win3::after {
+    top: calc(var(--cell-size) / 2);
+    transform: scale(1);
+    transform-origin: left;
+}
+
+.cell-container.win4::after {
+    transform: scale(1);
+    transform-origin: left;
+}
+
+.cell-container.win5::after {
+    bottom: calc(var(--cell-size) / 2);
+    transform: scale(1);
+    transition: 0.3s;
+    transform-origin: left;
+}
+
+
+.cell-container.win6::after {
+    top: 20px;
+    left: 20px;
+    transform: rotate(45deg);
+    scale: 1.2;
+    transition: scale 0.3s;
+}
+
+.cell-container.win7::after {
+    bottom: 20px;
+    left: 20px;
+    transform: rotate(-45deg);
+    scale: 1.2;
+    transition: scale 0.3s;
+}
+
+
