--- a/style.css
+++ b/style.css
@@ -61,7 +61,9 @@ body {
     gap: 50px;
 }
 
-.char {
+.char,
+.one,
+.two {
     width: var(--cell-size);
     height: var(--cell-size);
     display: flex;
@@ -91,6 +93,47 @@ body {
 .hide {
     opacity: 0;
 }
+
+.winDisplay {
+    position: absolute;
+    top: 12%;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    width: min-content;
+}
+
+.winDisplay > div {
+    display: flex;
+    gap: 30px;
+}
+
+.winDisplay > div > button {
+    font-family: inherit;
+    appearance: none;
+    border: none;
+    box-sizing: border-box;
+    width: 100px;
+    background-color: var(--subtle);
+    color: var(--yellow);
+    border-radius: 10px;
+    margin-top: 16px;
+    letter-spacing: 1px;
+    padding: 4px 20px;
+    transition: 0.2s;
+    cursor: pointer;
+}
+
+.winDisplay > div > button:hover {
+    transform: scale(1.1);
+}
+
+.winDisplay > div > button:active {
+    transform: scale(1);
+}
+
 
 .board {
     background-color: var(--background);
@@ -224,52 +267,50 @@ body {
 }
 
 .cell-container::after {
-    transform: scale(0);
+    scale: 0;
+    transition: scale 0.5s;
     transform-origin: top;
-    /* transition: 0.3s; */
     content: '';
     position: absolute;
-    background-color: var(--yellow);
-    width: 1px;
+    background-color: var(--plain);
+    width: 3px;
+    border-radius: 10px;
     height: 100%;
 }
 .cell-container.win0::after {
-    transform: scale(1);
+    scale: 1;
     left: calc(var(--cell-size) / 2);
 }
 
 .cell-container.win1::after {
-    transform: scale(1);
+    scale: 1;
 }
 
 .cell-container.win2::after {
-    transform: scale(1);
     transform-origin: top;
+    scale: 1;
     right: calc(var(--cell-size) / 2);
 }
 
 .cell-container.rows::after {
     transform-origin: left;
-    scale:0;
+    scale: 0;
     width: 100%;
-    height: 1px;
+    height: 4px;
 }
 
 .cell-container.win3::after {
     top: calc(var(--cell-size) / 2);
-    transform: scale(1);
-    transform-origin: left;
+    scale: 1;
 }
 
 .cell-container.win4::after {
-    transform: scale(1);
-    transform-origin: left;
+    scale: 1;
 }
 
 .cell-container.win5::after {
     bottom: calc(var(--cell-size) / 2);
-    transform: scale(1);
-    transition: 0.3s;
+    scale: 1;
     transform-origin: left;
 }
 
@@ -279,7 +320,6 @@ body {
     left: 20px;
     transform: rotate(45deg);
     scale: 1.2;
-    transition: scale 0.3s;
 }
 
 .cell-container.win7::after {
@@ -287,7 +327,4 @@ body {
     left: 20px;
     transform: rotate(-45deg);
     scale: 1.2;
-    transition: scale 0.3s;
 }
-
-
