fix bot first move character

--- a/style.css
+++ b/style.css
@@ -242,6 +242,13 @@ body {
     border-bottom: none;
 }
 
+.cell.pre-x::before,
+.cell.pre-x::after {
+    content: '';
+    scale: 0;
+    transition: 0.3s;
+}
+
 .cell.x::before,
 .cell.x::after,
 .char.x::before,
@@ -254,6 +261,7 @@ body {
     scale: 1;
     transition: 0.3s;
 }
+
 
 .cell.x::before,
 .char.x::before,
